--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <title>Vite App</title>
 </head>
 
-<body class="dark:bg-gray-900">
+<body class="dark:bg-slate-950">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
